<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="Search"
        app:showAsAction="ifRoom"
        app:actionViewClass="android.widget.SearchView" />
    <item
        android:id="@+id/app_bar_add"
        android:title="@string/button_list_manager_add"
        android:icon="@drawable/ic_add_24"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/app_bar_edit"
        android:icon="@drawable/ic_edit_24"
        android:title="@string/button_list_manager_edit"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/app_bar_delete"
        android:icon="@drawable/ic_delete_24"
        android:title="@string/button_list_manager_delete"
        app:showAsAction="ifRoom" />
</menu>