<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="width"
            type="int" />
    </data>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0,2,4,6,8">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            android:backgroundTint="@color/scanGray">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="@{width}"
                android:layout_height="wrap_content"
                android:text="@string/msg_list_manager_id"
                android:textSize="@dimen/text_size_h2"
                android:textStyle="bold" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/gray" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="@{width}"
                android:layout_height="wrap_content"
                android:text="@string/msg_list_manager_name"
                android:textSize="@dimen/text_size_h2"
                android:textStyle="bold"/>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/gray" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="@{width}"
                android:layout_height="wrap_content"
                android:text="@string/msg_list_manager_surname"
                android:textSize="@dimen/text_size_h2"
                android:textStyle="bold"/>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/gray" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="@{width}"
                android:layout_height="wrap_content"
                android:text="@string/msg_list_manager_organization"
                android:textSize="@dimen/text_size_h2"
                android:textStyle="bold"/>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/gray" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="@{width}"
                android:layout_height="wrap_content"
                android:text="@string/msg_list_manager_position"
                android:textSize="@dimen/text_size_h2"
                android:textStyle="bold"/>

        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/gray" />
    </TableLayout>

</layout>
