<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.EditFragment">


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/edit_snackbar_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/employee_name_lable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msg_list_manager_name"
                android:textSize="@dimen/text_size_h2" />

            <EditText
                android:id="@+id/edit_employee_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/msg_list_manager_name"
                android:inputType="textPersonName"
                android:maxLength="@integer/string_max_length" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/employee_surname_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msg_list_manager_surname"
                android:textSize="@dimen/text_size_h2"
                />

            <EditText
                android:id="@+id/edit_employee_surname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/msg_list_manager_surname"
                android:inputType="textPersonName"
                android:maxLength="@integer/string_max_length" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/employee_organization_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msg_list_manager_organization"
                android:textSize="@dimen/text_size_h2"
                />

            <EditText
                android:id="@+id/edit_employee_organization"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/msg_list_manager_organization"
                android:inputType="textPersonName"
                android:maxLength="@integer/string_max_length" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/employee_position_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msg_list_manager_position"
                android:textSize="@dimen/text_size_h2"
                />

            <EditText
                android:id="@+id/edit_employee_position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/msg_list_manager_position"
                android:inputType="textPersonName"
                android:maxLength="@integer/string_max_length" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/employee_pin_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msg_list_manager_pin"
                android:textSize="@dimen/text_size_h2" />

            <EditText
                android:id="@+id/edit_employee_pin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/msg_list_manager_pin"
                android:inputType="numberPassword"
                android:maxLength="@integer/pin_length" />

            <ImageView
                android:id="@+id/edit_employee_pin_show"
                android:layout_gravity="center"
                android:src="@drawable/ic_visibility_off_24" />
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:minHeight="20dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/employee_id_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msg_list_manager_id"
                android:textSize="@dimen/text_size_h2" />

            <TextView
                android:id="@+id/edit_employee_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_gravity="center"
                android:textSize="@dimen/text_size_h2" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/employee_organization_id_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msg_list_manager_organization_id"
                android:textSize="@dimen/text_size_h2"
                />

            <TextView
                android:id="@+id/edit_employee_organization_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="@dimen/text_size_h2" />

        </TableRow>

    </TableLayout>


    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/button_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout2" />

    <Button
        android:id="@+id/button_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/selector_button_green"
        android:text="@string/button_list_manager_edit_employee"
        android:textSize="@dimen/text_size_h2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

</androidx.constraintlayout.widget.ConstraintLayout>