<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:backgroundTint="@color/selector_item"
    >
    <data>
        <import type="com.selectuser.R" />
        <variable
            name="model"
            type="com.selectuser.EmployeeModel" />
<!--        type="com.selectuser.Adapter.ViewHolder"-->
    </data>


    <androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="5dp"
        app:selected="@{model.isSelected}"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:stretchColumns="0,1"
            >
<!--                        android:background="@{model.select ? R.color.teal_700 : R.color.white}"-->
            <!--            android:stretchColumns="2"-->


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/IdLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/msg_list_manager_id" />


                <TextView
                    android:id="@+id/id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{String.valueOf(model.id)}"
                    android:gravity="right"
                    />

            </TableRow>

            <View android:layout_width="match_parent"
                android:background="@color/gray"
                android:layout_height="1dp" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/FullNameLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/msg_list_manager_full_name" />


                <TextView
                    android:id="@+id/Name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text='@{String.format("%s  %s", model.name, model.surname)}'
                    android:gravity="right"
                    />

            </TableRow>

            <View android:layout_width="match_parent"
                android:background="@color/gray"
                android:layout_height="1dp" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/WorkLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/msg_list_manager_work" />


                <TextView
                    android:id="@+id/Organization"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text='@{String.format("%s  %s", model.organization, model.positionO)}'
                    android:gravity="right"
                    />
            </TableRow>


            <View android:layout_width="match_parent"
                android:background="@color/gray"
                android:layout_height="1dp" />


        </TableLayout>
    </androidx.cardview.widget.CardView>

</layout>